--- a/ustyl.css
+++ b/ustyl.css
@@ -545,6 +545,499 @@
   overflow: auto;
 }
 
+.mt1 {
+  padding-top: 1px;
+}
+.mr1 {
+  padding-right: 1px;
+}
+.mb1 {
+  padding-bottom: 1px;
+}
+.ml1 {
+  padding-left: 1px;
+}
+.mt2 {
+  padding-top: 2px;
+}
+.mr2 {
+  padding-right: 2px;
+}
+.mb2 {
+  padding-bottom: 2px;
+}
+.ml2 {
+  padding-left: 2px;
+}
+.mt3 {
+  padding-top: 3px;
+}
+.mr3 {
+  padding-right: 3px;
+}
+.mb3 {
+  padding-bottom: 3px;
+}
+.ml3 {
+  padding-left: 3px;
+}
+.mt4 {
+  padding-top: 4px;
+}
+.mr4 {
+  padding-right: 4px;
+}
+.mb4 {
+  padding-bottom: 4px;
+}
+.ml4 {
+  padding-left: 4px;
+}
+.mt5 {
+  padding-top: 5px;
+}
+.mr5 {
+  padding-right: 5px;
+}
+.mb5 {
+  padding-bottom: 5px;
+}
+.ml5 {
+  padding-left: 5px;
+}
+.mt6 {
+  padding-top: 6px;
+}
+.mr6 {
+  padding-right: 6px;
+}
+.mb6 {
+  padding-bottom: 6px;
+}
+.ml6 {
+  padding-left: 6px;
+}
+.mt7 {
+  padding-top: 7px;
+}
+.mr7 {
+  padding-right: 7px;
+}
+.mb7 {
+  padding-bottom: 7px;
+}
+.ml7 {
+  padding-left: 7px;
+}
+.mt8 {
+  padding-top: 8px;
+}
+.mr8 {
+  padding-right: 8px;
+}
+.mb8 {
+  padding-bottom: 8px;
+}
+.ml8 {
+  padding-left: 8px;
+}
+.mt9 {
+  padding-top: 9px;
+}
+.mr9 {
+  padding-right: 9px;
+}
+.mb9 {
+  padding-bottom: 9px;
+}
+.ml9 {
+  padding-left: 9px;
+}
+.mt10 {
+  padding-top: 10px;
+}
+.mr10 {
+  padding-right: 10px;
+}
+.mb10 {
+  padding-bottom: 10px;
+}
+.ml10 {
+  padding-left: 10px;
+}
+.mt11 {
+  padding-top: 11px;
+}
+.mr11 {
+  padding-right: 11px;
+}
+.mb11 {
+  padding-bottom: 11px;
+}
+.ml11 {
+  padding-left: 11px;
+}
+.mt12 {
+  padding-top: 12px;
+}
+.mr12 {
+  padding-right: 12px;
+}
+.mb12 {
+  padding-bottom: 12px;
+}
+.ml12 {
+  padding-left: 12px;
+}
+.mt13 {
+  padding-top: 13px;
+}
+.mr13 {
+  padding-right: 13px;
+}
+.mb13 {
+  padding-bottom: 13px;
+}
+.ml13 {
+  padding-left: 13px;
+}
+.mt14 {
+  padding-top: 14px;
+}
+.mr14 {
+  padding-right: 14px;
+}
+.mb14 {
+  padding-bottom: 14px;
+}
+.ml14 {
+  padding-left: 14px;
+}
+.mt15 {
+  padding-top: 15px;
+}
+.mr15 {
+  padding-right: 15px;
+}
+.mb15 {
+  padding-bottom: 15px;
+}
+.ml15 {
+  padding-left: 15px;
+}
+.mt16 {
+  padding-top: 16px;
+}
+.mr16 {
+  padding-right: 16px;
+}
+.mb16 {
+  padding-bottom: 16px;
+}
+.ml16 {
+  padding-left: 16px;
+}
+.mt17 {
+  padding-top: 17px;
+}
+.mr17 {
+  padding-right: 17px;
+}
+.mb17 {
+  padding-bottom: 17px;
+}
+.ml17 {
+  padding-left: 17px;
+}
+.mt18 {
+  padding-top: 18px;
+}
+.mr18 {
+  padding-right: 18px;
+}
+.mb18 {
+  padding-bottom: 18px;
+}
+.ml18 {
+  padding-left: 18px;
+}
+.mt19 {
+  padding-top: 19px;
+}
+.mr19 {
+  padding-right: 19px;
+}
+.mb19 {
+  padding-bottom: 19px;
+}
+.ml19 {
+  padding-left: 19px;
+}
+.mt20 {
+  padding-top: 20px;
+}
+.mr20 {
+  padding-right: 20px;
+}
+.mb20 {
+  padding-bottom: 20px;
+}
+.ml20 {
+  padding-left: 20px;
+}
+.mt25 {
+  padding-top: 25px;
+}
+.mr25 {
+  padding-right: 25px;
+}
+.mb25 {
+  padding-bottom: 25px;
+}
+.ml25 {
+  padding-left: 25px;
+}
+.mt30 {
+  padding-top: 30px;
+}
+.mr30 {
+  padding-right: 30px;
+}
+.mb30 {
+  padding-bottom: 30px;
+}
+.ml30 {
+  padding-left: 30px;
+}
+.mt35 {
+  padding-top: 35px;
+}
+.mr35 {
+  padding-right: 35px;
+}
+.mb35 {
+  padding-bottom: 35px;
+}
+.ml35 {
+  padding-left: 35px;
+}
+.mt40 {
+  padding-top: 40px;
+}
+.mr40 {
+  padding-right: 40px;
+}
+.mb40 {
+  padding-bottom: 40px;
+}
+.ml40 {
+  padding-left: 40px;
+}
+.mt45 {
+  padding-top: 45px;
+}
+.mr45 {
+  padding-right: 45px;
+}
+.mb45 {
+  padding-bottom: 45px;
+}
+.ml45 {
+  padding-left: 45px;
+}
+.mt50 {
+  padding-top: 50px;
+}
+.mr50 {
+  padding-right: 50px;
+}
+.mb50 {
+  padding-bottom: 50px;
+}
+.ml50 {
+  padding-left: 50px;
+}
+.mt60 {
+  padding-top: 60px;
+}
+.mr60 {
+  padding-right: 60px;
+}
+.mb60 {
+  padding-bottom: 60px;
+}
+.ml60 {
+  padding-left: 60px;
+}
+.mt70 {
+  padding-top: 70px;
+}
+.mr70 {
+  padding-right: 70px;
+}
+.mb70 {
+  padding-bottom: 70px;
+}
+.ml70 {
+  padding-left: 70px;
+}
+.mt80 {
+  padding-top: 80px;
+}
+.mr80 {
+  padding-right: 80px;
+}
+.mb80 {
+  padding-bottom: 80px;
+}
+.ml80 {
+  padding-left: 80px;
+}
+.mt90 {
+  padding-top: 90px;
+}
+.mr90 {
+  padding-right: 90px;
+}
+.mb90 {
+  padding-bottom: 90px;
+}
+.ml90 {
+  padding-left: 90px;
+}
+.mt100 {
+  padding-top: 100px;
+}
+.mr100 {
+  padding-right: 100px;
+}
+.mb100 {
+  padding-bottom: 100px;
+}
+.ml100 {
+  padding-left: 100px;
+}
+.mt110 {
+  padding-top: 110px;
+}
+.mr110 {
+  padding-right: 110px;
+}
+.mb110 {
+  padding-bottom: 110px;
+}
+.ml110 {
+  padding-left: 110px;
+}
+.mt120 {
+  padding-top: 120px;
+}
+.mr120 {
+  padding-right: 120px;
+}
+.mb120 {
+  padding-bottom: 120px;
+}
+.ml120 {
+  padding-left: 120px;
+}
+.mt130 {
+  padding-top: 130px;
+}
+.mr130 {
+  padding-right: 130px;
+}
+.mb130 {
+  padding-bottom: 130px;
+}
+.ml130 {
+  padding-left: 130px;
+}
+.mt140 {
+  padding-top: 140px;
+}
+.mr140 {
+  padding-right: 140px;
+}
+.mb140 {
+  padding-bottom: 140px;
+}
+.ml140 {
+  padding-left: 140px;
+}
+.mt150 {
+  padding-top: 150px;
+}
+.mr150 {
+  padding-right: 150px;
+}
+.mb150 {
+  padding-bottom: 150px;
+}
+.ml150 {
+  padding-left: 150px;
+}
+.mt160 {
+  padding-top: 160px;
+}
+.mr160 {
+  padding-right: 160px;
+}
+.mb160 {
+  padding-bottom: 160px;
+}
+.ml160 {
+  padding-left: 160px;
+}
+.mt170 {
+  padding-top: 170px;
+}
+.mr170 {
+  padding-right: 170px;
+}
+.mb170 {
+  padding-bottom: 170px;
+}
+.ml170 {
+  padding-left: 170px;
+}
+.mt180 {
+  padding-top: 180px;
+}
+.mr180 {
+  padding-right: 180px;
+}
+.mb180 {
+  padding-bottom: 180px;
+}
+.ml180 {
+  padding-left: 180px;
+}
+.mt190 {
+  padding-top: 190px;
+}
+.mr190 {
+  padding-right: 190px;
+}
+.mb190 {
+  padding-bottom: 190px;
+}
+.ml190 {
+  padding-left: 190px;
+}
+.mt200 {
+  padding-top: 200px;
+}
+.mr200 {
+  padding-right: 200px;
+}
+.mb200 {
+  padding-bottom: 200px;
+}
+.ml200 {
+  padding-left: 200px;
+}
+
 .static {
   position: static;
 }
@@ -567,6 +1060,15 @@
   bottom: 0;
 }
 
+.ta-left {
+  text-align: left;
+}
+.ta-center {
+  text-align: center;
+}
+.ta-right {
+  text-align: right;
+}
 
 .tx-bold {
   font-weight: bold;
