--- a/src/padding.styl
+++ b/src/padding.styl
@@ -1,14 +1,14 @@
 padding(numa)
-  .mt{num}
+  .pt{num}
     padding-top: (num)px
 
-  .mr{num}
+  .pr{num}
     padding-right: (num)px
 
-  .mb{num}
+  .pb{num}
     padding-bottom:  (num)px
 
-  .ml{num}
+  .pl{num}
     padding-left: (num)px
 
 
