--- a/ustyl.css
+++ b/ustyl.css
@@ -545,496 +545,496 @@
   overflow: auto;
 }
 
-.mt1 {
+.pt1 {
   padding-top: 1px;
 }
-.mr1 {
+.pr1 {
   padding-right: 1px;
 }
-.mb1 {
+.pb1 {
   padding-bottom: 1px;
 }
-.ml1 {
+.pl1 {
   padding-left: 1px;
 }
-.mt2 {
+.pt2 {
   padding-top: 2px;
 }
-.mr2 {
+.pr2 {
   padding-right: 2px;
 }
-.mb2 {
+.pb2 {
   padding-bottom: 2px;
 }
-.ml2 {
+.pl2 {
   padding-left: 2px;
 }
-.mt3 {
+.pt3 {
   padding-top: 3px;
 }
-.mr3 {
+.pr3 {
   padding-right: 3px;
 }
-.mb3 {
+.pb3 {
   padding-bottom: 3px;
 }
-.ml3 {
+.pl3 {
   padding-left: 3px;
 }
-.mt4 {
+.pt4 {
   padding-top: 4px;
 }
-.mr4 {
+.pr4 {
   padding-right: 4px;
 }
-.mb4 {
+.pb4 {
   padding-bottom: 4px;
 }
-.ml4 {
+.pl4 {
   padding-left: 4px;
 }
-.mt5 {
+.pt5 {
   padding-top: 5px;
 }
-.mr5 {
+.pr5 {
   padding-right: 5px;
 }
-.mb5 {
+.pb5 {
   padding-bottom: 5px;
 }
-.ml5 {
+.pl5 {
   padding-left: 5px;
 }
-.mt6 {
+.pt6 {
   padding-top: 6px;
 }
-.mr6 {
+.pr6 {
   padding-right: 6px;
 }
-.mb6 {
+.pb6 {
   padding-bottom: 6px;
 }
-.ml6 {
+.pl6 {
   padding-left: 6px;
 }
-.mt7 {
+.pt7 {
   padding-top: 7px;
 }
-.mr7 {
+.pr7 {
   padding-right: 7px;
 }
-.mb7 {
+.pb7 {
   padding-bottom: 7px;
 }
-.ml7 {
+.pl7 {
   padding-left: 7px;
 }
-.mt8 {
+.pt8 {
   padding-top: 8px;
 }
-.mr8 {
+.pr8 {
   padding-right: 8px;
 }
-.mb8 {
+.pb8 {
   padding-bottom: 8px;
 }
-.ml8 {
+.pl8 {
   padding-left: 8px;
 }
-.mt9 {
+.pt9 {
   padding-top: 9px;
 }
-.mr9 {
+.pr9 {
   padding-right: 9px;
 }
-.mb9 {
+.pb9 {
   padding-bottom: 9px;
 }
-.ml9 {
+.pl9 {
   padding-left: 9px;
 }
-.mt10 {
+.pt10 {
   padding-top: 10px;
 }
-.mr10 {
+.pr10 {
   padding-right: 10px;
 }
-.mb10 {
+.pb10 {
   padding-bottom: 10px;
 }
-.ml10 {
+.pl10 {
   padding-left: 10px;
 }
-.mt11 {
+.pt11 {
   padding-top: 11px;
 }
-.mr11 {
+.pr11 {
   padding-right: 11px;
 }
-.mb11 {
+.pb11 {
   padding-bottom: 11px;
 }
-.ml11 {
+.pl11 {
   padding-left: 11px;
 }
-.mt12 {
+.pt12 {
   padding-top: 12px;
 }
-.mr12 {
+.pr12 {
   padding-right: 12px;
 }
-.mb12 {
+.pb12 {
   padding-bottom: 12px;
 }
-.ml12 {
+.pl12 {
   padding-left: 12px;
 }
-.mt13 {
+.pt13 {
   padding-top: 13px;
 }
-.mr13 {
+.pr13 {
   padding-right: 13px;
 }
-.mb13 {
+.pb13 {
   padding-bottom: 13px;
 }
-.ml13 {
+.pl13 {
   padding-left: 13px;
 }
-.mt14 {
+.pt14 {
   padding-top: 14px;
 }
-.mr14 {
+.pr14 {
   padding-right: 14px;
 }
-.mb14 {
+.pb14 {
   padding-bottom: 14px;
 }
-.ml14 {
+.pl14 {
   padding-left: 14px;
 }
-.mt15 {
+.pt15 {
   padding-top: 15px;
 }
-.mr15 {
+.pr15 {
   padding-right: 15px;
 }
-.mb15 {
+.pb15 {
   padding-bottom: 15px;
 }
-.ml15 {
+.pl15 {
   padding-left: 15px;
 }
-.mt16 {
+.pt16 {
   padding-top: 16px;
 }
-.mr16 {
+.pr16 {
   padding-right: 16px;
 }
-.mb16 {
+.pb16 {
   padding-bottom: 16px;
 }
-.ml16 {
+.pl16 {
   padding-left: 16px;
 }
-.mt17 {
+.pt17 {
   padding-top: 17px;
 }
-.mr17 {
+.pr17 {
   padding-right: 17px;
 }
-.mb17 {
+.pb17 {
   padding-bottom: 17px;
 }
-.ml17 {
+.pl17 {
   padding-left: 17px;
 }
-.mt18 {
+.pt18 {
   padding-top: 18px;
 }
-.mr18 {
+.pr18 {
   padding-right: 18px;
 }
-.mb18 {
+.pb18 {
   padding-bottom: 18px;
 }
-.ml18 {
+.pl18 {
   padding-left: 18px;
 }
-.mt19 {
+.pt19 {
   padding-top: 19px;
 }
-.mr19 {
+.pr19 {
   padding-right: 19px;
 }
-.mb19 {
+.pb19 {
   padding-bottom: 19px;
 }
-.ml19 {
+.pl19 {
   padding-left: 19px;
 }
-.mt20 {
+.pt20 {
   padding-top: 20px;
 }
-.mr20 {
+.pr20 {
   padding-right: 20px;
 }
-.mb20 {
+.pb20 {
   padding-bottom: 20px;
 }
-.ml20 {
+.pl20 {
   padding-left: 20px;
 }
-.mt25 {
+.pt25 {
   padding-top: 25px;
 }
-.mr25 {
+.pr25 {
   padding-right: 25px;
 }
-.mb25 {
+.pb25 {
   padding-bottom: 25px;
 }
-.ml25 {
+.pl25 {
   padding-left: 25px;
 }
-.mt30 {
+.pt30 {
   padding-top: 30px;
 }
-.mr30 {
+.pr30 {
   padding-right: 30px;
 }
-.mb30 {
+.pb30 {
   padding-bottom: 30px;
 }
-.ml30 {
+.pl30 {
   padding-left: 30px;
 }
-.mt35 {
+.pt35 {
   padding-top: 35px;
 }
-.mr35 {
+.pr35 {
   padding-right: 35px;
 }
-.mb35 {
+.pb35 {
   padding-bottom: 35px;
 }
-.ml35 {
+.pl35 {
   padding-left: 35px;
 }
-.mt40 {
+.pt40 {
   padding-top: 40px;
 }
-.mr40 {
+.pr40 {
   padding-right: 40px;
 }
-.mb40 {
+.pb40 {
   padding-bottom: 40px;
 }
-.ml40 {
+.pl40 {
   padding-left: 40px;
 }
-.mt45 {
+.pt45 {
   padding-top: 45px;
 }
-.mr45 {
+.pr45 {
   padding-right: 45px;
 }
-.mb45 {
+.pb45 {
   padding-bottom: 45px;
 }
-.ml45 {
+.pl45 {
   padding-left: 45px;
 }
-.mt50 {
+.pt50 {
   padding-top: 50px;
 }
-.mr50 {
+.pr50 {
   padding-right: 50px;
 }
-.mb50 {
+.pb50 {
   padding-bottom: 50px;
 }
-.ml50 {
+.pl50 {
   padding-left: 50px;
 }
-.mt60 {
+.pt60 {
   padding-top: 60px;
 }
-.mr60 {
+.pr60 {
   padding-right: 60px;
 }
-.mb60 {
+.pb60 {
   padding-bottom: 60px;
 }
-.ml60 {
+.pl60 {
   padding-left: 60px;
 }
-.mt70 {
+.pt70 {
   padding-top: 70px;
 }
-.mr70 {
+.pr70 {
   padding-right: 70px;
 }
-.mb70 {
+.pb70 {
   padding-bottom: 70px;
 }
-.ml70 {
+.pl70 {
   padding-left: 70px;
 }
-.mt80 {
+.pt80 {
   padding-top: 80px;
 }
-.mr80 {
+.pr80 {
   padding-right: 80px;
 }
-.mb80 {
+.pb80 {
   padding-bottom: 80px;
 }
-.ml80 {
+.pl80 {
   padding-left: 80px;
 }
-.mt90 {
+.pt90 {
   padding-top: 90px;
 }
-.mr90 {
+.pr90 {
   padding-right: 90px;
 }
-.mb90 {
+.pb90 {
   padding-bottom: 90px;
 }
-.ml90 {
+.pl90 {
   padding-left: 90px;
 }
-.mt100 {
+.pt100 {
   padding-top: 100px;
 }
-.mr100 {
+.pr100 {
   padding-right: 100px;
 }
-.mb100 {
+.pb100 {
   padding-bottom: 100px;
 }
-.ml100 {
+.pl100 {
   padding-left: 100px;
 }
-.mt110 {
+.pt110 {
   padding-top: 110px;
 }
-.mr110 {
+.pr110 {
   padding-right: 110px;
 }
-.mb110 {
+.pb110 {
   padding-bottom: 110px;
 }
-.ml110 {
+.pl110 {
   padding-left: 110px;
 }
-.mt120 {
+.pt120 {
   padding-top: 120px;
 }
-.mr120 {
+.pr120 {
   padding-right: 120px;
 }
-.mb120 {
+.pb120 {
   padding-bottom: 120px;
 }
-.ml120 {
+.pl120 {
   padding-left: 120px;
 }
-.mt130 {
+.pt130 {
   padding-top: 130px;
 }
-.mr130 {
+.pr130 {
   padding-right: 130px;
 }
-.mb130 {
+.pb130 {
   padding-bottom: 130px;
 }
-.ml130 {
+.pl130 {
   padding-left: 130px;
 }
-.mt140 {
+.pt140 {
   padding-top: 140px;
 }
-.mr140 {
+.pr140 {
   padding-right: 140px;
 }
-.mb140 {
+.pb140 {
   padding-bottom: 140px;
 }
-.ml140 {
+.pl140 {
   padding-left: 140px;
 }
-.mt150 {
+.pt150 {
   padding-top: 150px;
 }
-.mr150 {
+.pr150 {
   padding-right: 150px;
 }
-.mb150 {
+.pb150 {
   padding-bottom: 150px;
 }
-.ml150 {
+.pl150 {
   padding-left: 150px;
 }
-.mt160 {
+.pt160 {
   padding-top: 160px;
 }
-.mr160 {
+.pr160 {
   padding-right: 160px;
 }
-.mb160 {
+.pb160 {
   padding-bottom: 160px;
 }
-.ml160 {
+.pl160 {
   padding-left: 160px;
 }
-.mt170 {
+.pt170 {
   padding-top: 170px;
 }
-.mr170 {
+.pr170 {
   padding-right: 170px;
 }
-.mb170 {
+.pb170 {
   padding-bottom: 170px;
 }
-.ml170 {
+.pl170 {
   padding-left: 170px;
 }
-.mt180 {
+.pt180 {
   padding-top: 180px;
 }
-.mr180 {
+.pr180 {
   padding-right: 180px;
 }
-.mb180 {
+.pb180 {
   padding-bottom: 180px;
 }
-.ml180 {
+.pl180 {
   padding-left: 180px;
 }
-.mt190 {
+.pt190 {
   padding-top: 190px;
 }
-.mr190 {
+.pr190 {
   padding-right: 190px;
 }
-.mb190 {
+.pb190 {
   padding-bottom: 190px;
 }
-.ml190 {
+.pl190 {
   padding-left: 190px;
 }
-.mt200 {
+.pt200 {
   padding-top: 200px;
 }
-.mr200 {
+.pr200 {
   padding-right: 200px;
 }
-.mb200 {
+.pb200 {
   padding-bottom: 200px;
 }
-.ml200 {
+.pl200 {
   padding-left: 200px;
 }
 
